docs: professional test matrix — nine suites, 116 passing, regression policy